2012-09-20  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (v0.3.1)

	- If the image has all voxels == 1, then the smoothed local convex
	hull is the image itself and we don't need to waste time doing
	other computations. Likewise, if the image has all voxels == 0,
	there's nothing to smooth

	* matlab/FiltersToolbox/blockproc3.m: (v0.4.0)
	* matlab/FiltersToolbox/scimat_blockproc3.m: (v0.3.0)

	- Replace input argument PARALLEL by NUMWORKERS. This way, instead
	of simply saying whether we want to use parallel processing or
	not, we can specify the maximum number of workers we allow the
	function to use at the same time. This is very useful to avoid the
	memory filling up too much in some cases, and also to spare a
	couple of processors to continue working normally while heavy
	computations are run.

	- Add cleanup functions so that queued and running jobs are
	cancelled if the user presses CTRL+C, and to make sure that we
	reset the number of workers available in the cluster when we exit
	the function.

2012-09-19  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/scimat_blockproc3.m: (v0.2.1)
	* matlab/FiltersToolbox/blockproc3.m: (v0.3.1)

	- Fix bug. We forgot to compute the I,J,K indices, so all results
	were being saved to the same output block.

	* Delete matlab/FiltersToolbox/Deconvolve.cpp:
	* Delete matlab/FiltersToolbox/deconvolve.m:
	* Delete cpp/src/third-party/cquammen-Clarity:
	* cpp/src/CMakeLists.txt: (v0.2.3)

	- Remove the third party clarity library and the MEX interface we
	build to run deconvolutions. We found it to be slightly buggy, and
	Matlab's own deconvolution functions work very well and are fast.

	* matlab/FiltersToolbox/scimat_blockproc3.m: (v0.2.0)
	* matlab/FiltersToolbox/blockproc3.m: (v0.3.0)

	- Replace parfor by jobs/createTask. This way, we don't need to
	create a cell array with all the image blocks, consuming a lot of